--- a/style.css
+++ b/style.css
@@ -1,545 +1,132 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Lato:wght@300&family=Merriweather:wght@300&family=Nunito+Sans:opsz,wght@6..12,300&family=Nunito:wght@200&family=PT+Sans:ital@1&family=Poppins&family=Ubuntu&display=swap");
+
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  font-family: "Inter", sans-serif;
-  font-family: "Lato", sans-serif;
-  font-family: "Merriweather", serif;
-  font-family: "Nunito", sans-serif;
-  font-family: "Nunito Sans", sans-serif;
-  font-family: "Poppins", sans-serif;
-  font-family: "PT Sans", sans-serif;
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Poppins', sans-serif;
+}
+
+body {
+  background-color: #f0f4f8;
+  color: #333;
 }
 
 nav {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 3.5rem;
-    background-color: black;
-    color: white;
-    /* margin-top: 0.3rem; */
-    padding-top: 1rem;
-    padding-right: 1.6rem;
-    padding-left: 1.5rem;
-    position: fixed;
-    top: 0px;
-    z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ff5722;
+  padding: 1rem 2rem;
 }
+
+nav p {
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+#user-profile{
+  display: none;
+}
+
+
 
 .ul-items {
-  display: flex;
   list-style: none;
+  display: flex;
+  gap: 1rem;
+  margin: 0;
+  padding: 0;
 }
 
-nav p{
-    margin-left: 0.5rem;
-}
-nav .items {
-  margin-right: 1.5rem;
-}
-
-/* -------------main-container----------- */
-
-.main-container div{
-    margin-left: 2rem;
-    position: relative;
-    top: 3.5rem;
+.items a {
+  color: #fff;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  transition: background-color 0.3s ease;
 }
 
-.main-container h1{
-    margin-bottom: 1.5rem;
-    margin-top: 1.5rem;
-    font-size: 4rem;
-    
+.items a:hover {
+  background-color: #e64a19;
+  border-radius: 5px;
 }
 
-.main-container p{
-    margin-bottom: 1.5rem;
-    font-size: 1.5rem;
+.main-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  gap: 11rem;
 }
 
-.main-container img{
-    width: 69%;
-    margin-top: -2.4rem;
-    height: 32em;
-    margin-left: 25rem;
+.main-container div {
+  max-width: 500px;
 }
 
-#login{
-    padding: 0.4rem;
-    width: 7.5rem;
-    background-color: black;
-    color: white;
-    margin-right: 1rem;
-    text-decoration: none;
+.main-container h1 {
+  font-size: 3.5rem;
+  color: #ff5722;
 }
 
-#signup{
-    padding: 0.4rem;
-    width: 7.5rem;
-    background-color:  white;
-    color: black;
-    text-decoration: none;
+.main-container p {
+  font-size: 1.2rem;
+  margin: 1rem 0;
 }
 
-
-
-/* -------------------------------------------signup page--------------------------------------------------------------------------------- */
-
-form input{
-    width: 93%;
-    height: 2.5rem;
-    margin-bottom: 1rem;
-    margin-left: 3rem;
-    padding-left: 0.8rem;
+.main-container img {
+  width: 100%;
+  max-width: 750px;
+  height: auto;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.from-info p{
-    margin-left: 3rem;
-    margin-top: 2rem;
-    margin-bottom: 1.5rem;
-    font-size: 1.22rem;
+#login-home, #signup {
+  padding: 0.5rem 1rem;
+  border-radius: 25px;
+  width: 150px;
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
-#btnOfSignup{
-    margin-left: 3rem;
-    width: 6.1rem;
-    height: 2rem;
-    background-color: black;
-    color: white;
-}
- 
-.from-info .orgLogin{
-    margin-left: 3rem;
-    width: 6.1rem;
-    height: 2rem;
-    background-color: black;
-    color: white;
+#login-home {
+  background-color: #ff5722;
+  color: white;
+  margin-right: 1rem;
 }
 
-#alert{
-    color: red;
-    font-size: 0.9em;
+#signup {
+  background-color: white;
+  color: #ff5722;
+  border: 2px solid #ff5722;
 }
 
-#alert1{
-    color: green;
-    font-size: 0.9em;
-}
-/*--------------------------------------------------shop.html------------------------------------- */
-/* 
--------------------------sidebar-------------------------- */
-
- .ul-items a{
-    text-decoration: none;
-    color: white;
+#login-home:hover, #signup:hover {
+  transform: translateY(-3px);
 }
 
-/*
-.inner-container{
-    display: flex;  
+#login-home:hover {
+  background-color: #e64a19;
 }
 
-.sidebar{
-    width: 13%;
-    height: 92vh;
-    background-color: black;
-    color: white;
-    position: fixed;
-    top: 3.5rem;
-    z-index: 1000;
+#signup:hover {
+  background-color: #ffccbc;
 }
-
-.sidebar p{
-    margin-left: 1rem;
-    font-weight: 200;
-    margin-bottom: 0.7rem;
-}
-
-.sidebar input{
-    margin-left: 1rem;
-    margin-bottom: 0.5rem;
-}
-
-.sidebar .top-hr{
-    margin-bottom: 1rem;
-}
-
-.others{
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-
-#apply-filterbtn{
-    color: white;
-    background-color: black;
-    border: 0.1rem solid gray;
-    width: 7rem;
-    height: 3em;
-    margin-top: 2rem;
-    margin-left: 1rem;
-}  */
-
-/* -------------------main-content------------------ */
-
-.main-container-shop{
-    position: relative;
-    top: 3.5rem;
-    
-}
-
-.serach input{
-    height: 2.5em;
-    /* width: 155%; */
-    width: 78.9rem;
-    margin-top: 1rem;
-    padding: 1rem;
-    padding-left: 2.5rem;
-    font-size: 1rem;
-    font-weight: 400;
-    margin-bottom: 2rem;
-  
-}
-
-.serach img{
-    position: absolute;
-    margin-top: 1.6rem;
-    margin-left: 0.6rem;
-    height: 1.5em;
-    padding-left: 0.2rem;
-}
-
-.mencard-title{
-    font-size: 1.4rem;
-    margin-bottom: 1rem;
-}
-
-
-
-
-/* ---------------------------shopping-cards--------------------------------------------------------------------------------- */
-/* 
------------------------------------mens-cards----------------------------------- */
-.main-container-shop{
-    margin-left: 9rem;
-}
-.shopping-cards{
-    width: 16.1rem;
-    /* border: 1px solid gray; */
-    /* margin-left: 1.7rem; */
-    display: flex;
-    width: 78.5rem;
-    overflow-x: auto;
-    white-space: nowrap;
-
-}
-
-.shopping-cards .cards{
-    border: 1px solid gray;
-    margin-right: 2rem;
-}
-
-.shopping-cards img{
-    width: 18rem;
-    height: 19em;
-}
-.shopping-cards .middle{
-    display: flex;
-    justify-content: space-between;
-}
-
-.shopping-cards p{
-    margin-top: 0.5rem;
-    margin-left: 0.8rem;
-    margin-bottom: 0.6rem;
-}
-
-.title{
-    font-size: 1.4rem;
-    margin-bottom: 1rem;
-    margin-top: 1.4rem;
-}
-
-.middle .special-p{
-    margin-right: 0.8rem;
-}
-
-#addTocard-btn{
-    width: 19rem;
-    height: 2.5em;
-    background-color: black;
-    color: white;
-    font-size: 1rem;
-}
-
-.tags .special-tag{
-    width: 14.26rem;
-    height: 2.3em;
-    background-color: black;
-    color: white;
-    /* margin-left: 1.7rem; */
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    font-size: 1rem;
-}
-
-.tags .other-tag{
-    width: 14.26rem;
-    height: 2.3em;
-    background-color: white;
-    color: black;
-    margin-left: 1.6rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    font-size: 1rem;
-}
-
-
-/* -------------------------------------------------------Shoppingcard.html----------------------------------------------- */
-
-.cart-container{
-    position: relative;
-    top: 3.5rem;
-}
-
-.cart-container h1{
-    text-align: center;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    font-size: 2.5rem;
-}
-
-.carts-checkout{
-    display: flex;
-}
-
-.carts-checkout .checkout-list{
-    width: 17%;
-    height: 20em;
-    background-color: black;
-    color: white;
-    margin-left: 76rem;
-}
-
-.checkout-list .total{
-    display: flex;
-    justify-content: space-between;
-}
-
-.checkout-list .top-title{
-    text-align: center;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-
-.checkout-list button{
-    margin-top: 1rem;
-    height: 2.5rem;
-    width: 11rem;
-    text-align: center;
-    margin-left: 2.7rem;
-}
-
-.checkout-list hr{
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-
-/* ------------------------------------------------------profile---------------------------------------------- */
-
-.my-profile{
-    margin-top: 3.5rem;
-}
-
-.my-profile h1{
-    text-align: center;
-    margin-top: 5rem;
-    margin-bottom: 2rem;
-    font-size: 2.5rem;
-}
-
-.edit-password h1{
-    text-align: center;
-    margin-top: 1rem;
-    margin-bottom: 2rem;
-    font-size: 2.5rem;
-}
-
-#change-pass, #logout, #save-info{
-    padding: 0.4rem;
-    width: 10.5rem;
-    background-color: black;
-    color: white;
-    /* margin-right: 1rem; */
-    margin-left: 3rem;
-    height: 2.3rem;
-    margin-bottom: 1rem;
-}
-
-/* 
---------------------------------------active--------------------------------------------------------- */
-
-.active {
-    background-color: rgb(15, 15, 23) !important;
-    color: white !important;
-}
-
-  
- .hide{
-    display: node;
- }
-
-
-
- /* -----------------------------------------profile---------------------------------------------------- */
-
- body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-}
-
-.profile-container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #ffffff;
-    border: 1px solid #ccc;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    margin-top: 6rem;
-
-}
-
-.profile-header {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.profile-header h1 {
-    font-size: 24px;
-    color: #333;
-}
-
-.profile-content {
-    display: flex;
-    align-items: center;
-}
-
-.profile-avatar {
-    flex: 1;
-    text-align: center;
-}
-
-.avatar-image {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    border: 2px solid #333;
-}
-
-.profile-details {
-    flex: 2;
-    padding: 20px;
-}
-
-.profile-details h2 {
-    font-size: 20px;
-    color: #333;
-    margin-bottom: 10px;
-}
-
-.profile-details p {
-    font-size: 16px;
-    color: #666;
-    margin: 5px 0;
-}
-
-#Logout{
-    width: 7rem;
-    height: 2rem;
-    margin-top: 1rem;
-    background: burlywood;
-    padding: 0rem;
-    padding-bottom: 0.2rem;
-}
-
-
-
-/* -------------------------------------------Responsive------------------------------------------------- */
-
 
 @media screen and (max-width: 480px) {
-    .main-container {
-        display: flex;
-        flex-direction: column;
-    }
+  .main-container {
+    flex-direction: column;
+    text-align: center;
+  }
 
-    .main-container img {
-        width: 100% !important;
-        margin-top: 6rem !important; 
-        height: auto !important; 
-        margin-left: 0rem !important;
-    }
-    
-    .from-info form input {
-        width: 78%;
-    }
+  .main-container img {
+    margin-top: 1rem;
+  }
 
-    #container1 nav p{
-        display: none;
-    }
-
-    #login-container nav p{
-        display: none;
-    }
-
-    .main-container-shop {
-        margin-left: 3rem !important;
-    }
-
-    .serach input {
-        width: 68.9rem !important;
-    }
-
-    nav {
-        justify-content: center !important;
-    }
-    
-    #container2 nav p{
-        display: none;
-    }
-
-    nav p{
-        display: none;
-    }
-
-   
-}
-
-
-@media screen and (max-width: 780px){
-    
-    .from-info form input {
-        width: 87% !important;
-    }
-
-    .main-container-shop {
-        margin-left: 2.5rem !important;
-        
-    }
-
-    .serach input{
-        width: 71.9rem !important;
-    }
-
-    .main-container img {
-        width: 100% !important;
-        margin-top: 6.6rem !important;
-        height: 25em !important;
-        margin-left: 0px !important;
-    }
+  nav p {
+    display: none;
+  }
 }
